--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 members = ["schema", "schema-derive", "schema-test" ]
-default-members = ["schema", "schema-derive" ]
+default-members = ["schema", "schema-derive", "schema-test" ]
 
